tap/istio/03-mtls-from-gateway/01-istio-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress # use the one I created earlier
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "tap-gui.tap10istio.12factor.xyz"
    - "*.cnr.tap10istio.12factor.xyz"
    - "learningcenter.tap10istio.12factor.xyz"
    - "*.learningcenter.tap10istio.12factor.xyz"
  # https ingress not yet working - I've not got the correct CERT configuration (DNS required)
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls: # Use ISTIO_MUTUAL not SIMPLE to FORCE mTLS (STRICT forced in PeerAuthentication)
      mode: SIMPLE
      credentialName: ingress-cert
    hosts:
    - "tap-gui.tap10istio.12factor.xyz"
    - "*.cnr.tap10istio.12factor.xyz"
    - "learningcenter.tap10istio.12factor.xyz"
    - "*.learningcenter.tap10istio.12factor.xyz"
